<resources>
    <string name="app_name">MyPlace</string>
    <string name="facebook_app_id">1408303059658576</string>
    <string name="fb_login_protocol_scheme">fb1408303059658576</string>
    <string name="facebook_client_token">0487fd6548a17b315e7f0f0654981e2d</string>
    <string name="googleAccountWebClientID">566178145699-cd5i71d50hn4qqv1n2oa7drhm4ahatar.apps.googleusercontent.com</string>
    <string name="default_notification_channel_id">com.dmss.burbankapp</string>
    <string name="default_notification_channel_name">App Notifications</string>
    <string name="designs">HOME DESIGNS</string>
    <string name="myday">MYDAY</string>
    <string name="my">My</string>
    <string name="Please_login_to_show_your_favourites">Please login to show your favourites</string>
    <string name="Please_login_to_view_edit_profile">Please login to view/edit profile</string>
    <string name="displays">DISPLAYS</string>
    <string name="mystyle">MYSTYLE</string>
    <string name="homeandland">House &amp;LAND</string>
    <string name="display_homes">DISPLAY HOMES</string>
    <string name="display">Display</string>
    <string name="homes">Homes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="linear">Linear</string>
    <string name="grid">Grid</string>
    <string name="See_one_of_our_display_homes">See one of our display homes</string>
    <string name="Check_out_the_displays_that_are_near_you_right_now">Check out the displays that are\nnear you right now</string>
    <string name="Are_you_looking_for_specific_design">Are you looking for specific design?</string>
    <string name="Choose_the_region_youre_interested_in">Choose the region you\'re interested in</string>
    <string name="Choose_a_display_from_the">Choose a display from the </string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="homeandLand">House&amp;Land</string>
    <string name="house">House</string>
    <string name="and_symbol">&amp;</string>
    <string name="and_land">&amp;Land</string>
    <string name="land">Land</string>
    <string-array name="victoria">
        <item>@string/Where_would_you_like_to_live</item>
        <item>Not Sure Yet</item>
        <item>West Region</item>
        <item>North Region</item>
        <item>South East Region</item>
        <item>Regional South East</item>
        <item>Geelong &amp; Bellarine Region</item>
        <item>Ballarat Region</item>
        <item>Bendigo Region</item>
    </string-array>
    <string-array name="queensland">
        <item>@string/Where_would_you_like_to_live</item>
        <item>Brisbane Metro</item>
        <item>Gold Coast</item>
        <item>North/Moreton</item>
        <item>South/Logan</item>
        <item>Sunshine Coast</item>
        <item>West/Ipswich</item>
        <item>East/Redlands</item>
        <item>Other or Unsure</item>
    </string-array>
    <string name="south_austalia">SOUTH AUSTALIA</string>
    <string name="nsw_act">NSW / ACT</string>
    <string name="please_select_state">PLEASE SELECT STATE</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="no_saved_displays">NO SAVED DISPLAYS</string>
    <string name="no_saved_packages">NO SAVED PACKAGES</string>
    <string name="no_saved_designs">NO SAVED DESIGNS</string>
    <string name="favourites_not_available">Favourites not available</string>
    <string name="show_packages">Show Packages</string>
    <string name="start_new">Start New</string>
    <string name="recent_search">RECENT SEARCH</string>
    <string name="error_no_internet_connection">Internet Connection Not Available</string>
    <string name="request_time_out">The request time out.</string>
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <string name="choose_your_method_of_sign_in">Choose your method of sign in</string>
    <string name="are_you_a_new_user">Are you a new user?</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome_to">Welcome to</string>
    <string name="what_would_you_like_to_do_today">What would you like to do today?</string>
    <string name="place">Place</string>
    <string name="amazing_designs">amazing designs</string>
    <string name="browse_our">Browse our</string>
    <string name="home_design">Home Designs</string>
    <string name="find_a_home_amp"><![CDATA[Find a house &]]></string>
    <string name="land_package">land package</string>
    <string name="how_does_it_work">How does it work ?</string>
    <string name="do_you_have_land">Do you have land?</string>
    <string name="what_region_are_you">What Region are you</string>
    <string name="lookin_for_your_new_home">Looking for your new home?</string>
    <string name="how_many_storeys_are">How many storeys are</string>
    <string name="you_looking_for">You Looking for?</string>
    <string name="are_you_looking_for">ARE You Looking for?</string>
    <string name="i_must_have_this">I MUST HAVE THIS</string>
    <string name="i_don_t_mind">I DON’T MIND</string>
    <string name="don_t_have_account">Don’t have an account?</string>
    <string name="are_you_new_user">Are you a new user?</string>
    <string name="i_don_t_want_this">I DO NOT WANT THIS</string>
    <string name="i_agree_for_sharing_my_favourites">I agree for sharing my favourites</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passcode_will_be_sent_to_following_email_to_reset_password">Passcode will be sent to following Email to reset password</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="fill_out_this_form_to_save_your_progress">Fill out this form to save your progress</string>
    <string name="enquire">Enquire</string>
    <string name="amp_ampland">&amp;Land</string>
    <string name="home_amp_land">HOUSE &amp; LAND</string>
    <string name="home">Home</string>
    <string name="design">Designs</string>
    <string name="home_tour">Home Tour</string>
    <string name="virtual">Virtual\u0020</string>
    <string name="favourite_list">Favourite Designs</string>
    <string name="favourite_packages">Favourite Packages</string>
    <string name="favourite_displays">Favourite Displays</string>
    <string name="iam_looking">I\'M LOOKING</string>
    <string name="iam_building">I\'M BUILDING</string>
    <string name="home_amp_land_small">House &amp; Land</string>
    <string name="house_amp_land_small">House &amp; Land</string>
    <string name="please_check_your_internet_connection">Please check your \n internet connection</string>
    <string name="ms"><![CDATA[%1$sm<sup><small><small>2</small></small><sup>]]></string>
    <string name="now">Now</string>
    <string name="morning">Morning</string>
    <string name="middle_of_the_day">Middle Of The Day</string>
    <string name="afternoon">Afternoon</string>
    <string name="get_directions">GET DIRECTIONS</string>
    <string name="book_an_appointment">BOOK AN APPOINTMENT</string>
    <string name="book_an_appointment_small">Book an Appointment</string>
    <string name="take_a_quick_survey_to_find_your_perfect_design">Take a quick survey to find your perfect design</string>
    <string name="favourites">Favourites</string>
    <string name="favourites_small">Favourites</string>
    <string name="FAVOURITES">FAVOURITES</string>
    <string name="popular_home_designs">POPULAR HOME DESIGNS</string>
    <string name="suggested_displays">SUGGESTED DISPLAYS</string>
    <string name="new_displays">NEW DISPLAYS</string>
    <string name="thank_you_for_your_appointment_request_a_new_home_consultant_will_be_in_touch_with_your_precise_appointment_time">Thank you for your appointment request. A New Home Consultant will be in touch with your precise appointment time.</string>
    <string name="find_your_perfect_home_on_burbank_homes_app_the_only_property_app">Whether you’re currently building with Burbank or starting to explore your options, the MyPlace app streamlines your experience and keeps you informed.
\n\nDesigned to keep you on track every step of the way. Simplify your home building journey, with all of your information in one place – MyPlace.
</string>
    <string name="lot">LOT</string>
    <string name="Where_would_you_like_to_live">Where would you like to live?</string>
    <string name="myprofile">My Profile</string>
    <string name="JUST_LOOKING">JUST LOOKING</string>
    <string name="deposited">DEPOSITED</string>
    <string name="customer">CUSTOMER</string>
    <string-array name="south_australia">
        <item>@string/Where_would_you_like_to_live</item>
        <item>Adelaide Hills</item>
        <item>East</item>
        <item>North</item>
        <item>Regional</item>
        <item>South</item>
        <item>West</item>
        <item>Other or Unsure</item>
    </string-array>
    <string-array name="nsw">
        <item>@string/Where_would_you_like_to_live</item>
        <item>ACT &amp; Surrounds</item>
        <item>Newcastle/Hunter</item>
        <item>North-West Sydney</item>
        <item>South-West Sydney</item>
        <item>Wollongong/Nowra</item>
        <item>Other or Unsure</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="floor_plan_loading">Floorplan is Loading..</string>
    <string name="bedrooms">BEDROOMS</string>
    <string name="not_sure">NOT SURE</string>
    <string name="single">SINGLE</string>
    <string name="double_text">DOUBLE</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>