<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangel_white_button"
    android:padding="@dimen/_16dp">

    <TextView
        android:id="@+id/tv_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:textAppearance="@style/FontMedium"
        android:gravity="center"
        android:text="Request for sharing account"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cv_profile"
        android:layout_width="@dimen/_60dp"
        android:layout_height="@dimen/_60dp"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_8dp"
        android:src="@drawable/profile_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_request" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/cv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_profile"
        app:layout_constraintTop_toTopOf="@+id/cv_profile">

        <TextView
            android:id="@+id/tv_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:textAppearance="@style/FontMedium"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3dp"
             android:textAppearance="@style/FontMedium"
            android:text="@string/app_name"
            android:textSize="@dimen/_14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_full_name" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_request_to_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
         android:textAppearance="@style/FontMedium"
        android:text="Requested to share your favourite designs"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_profile" />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2dp"
        android:layout_marginTop="@dimen/_5dp"
        android:background="@color/view_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_request_to_share" />

    <ImageView

        android:id="@+id/iv_check"
        android:layout_width="@dimen/_25dp"
        android:layout_height="@dimen/_25dp"
        android:layout_marginStart="@dimen/_10dp"
        android:src="@drawable/uncheck_share"
        app:layout_constraintBottom_toBottomOf="@+id/tv_i_agree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_i_agree" />

    <TextView
        android:id="@+id/tv_i_agree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_16dp"
        android:gravity="start"
        android:text="@string/i_agree_for_sharing_my_favourites"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_check"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40dp"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:background="@drawable/rectangel_black"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
         android:textAppearance="@style/FontMedium"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_i_agree" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40dp"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:background="@drawable/rectangel_skip"
        android:gravity="center"
         android:textAppearance="@style/FontMedium"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_i_agree"

        />

</androidx.constraintlayout.widget.ConstraintLayout>