<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_bg_3.1"
    tools:context=".ui.homeandland.HomeAndLandStoreysFragment">


    <include layout="@layout/homeland_tool" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_top"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_30dp">

            <TextView
                android:id="@+id/tv_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textAppearance="@style/FontMedium"
                android:text="@string/how_many_storeys_are"
                android:textAllCaps="true"
                android:textColor="@color/black_bg_3.1"
                android:textSize="@dimen/header_text"
                />

            <TextView
                android:id="@+id/tv_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_first"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:textAppearance="@style/FontMedium"
                android:text="@string/you_looking_for"
                android:textAllCaps="true"
                android:textColor="@color/black_bg_3.1"
                android:textSize="@dimen/header_text"
             />


            <LinearLayout
                android:id="@+id/ll_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_16dp"
                android:paddingEnd="@dimen/_16dp"
                android:weightSum="3">

                <com.dmss.burbankapp.utility.SquareView
                    android:id="@+id/ll_single"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangel_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:id="@+id/img_single"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/group_single"
                        android:gravity="center"
                        app:tint="@color/grey_text_font_3.1" />

                    <TextView
                        android:id="@+id/tv_single"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                         android:textAppearance="@style/FontMedium"
                        android:gravity="center"
                        android:text="@string/single"
                        android:textAllCaps="false"
                        android:textColor="@color/grey_text_font_3.1"
                        android:textSize="16sp" />
                </com.dmss.burbankapp.utility.SquareView>

                <com.dmss.burbankapp.utility.SquareView
                    android:id="@+id/ll_double"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangel_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:id="@+id/img_double"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/group_double"
                        android:gravity="center"
                        app:tint="@color/grey_text_font_3.1" />

                    <TextView
                        android:id="@+id/tv_double"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                         android:textAppearance="@style/FontMedium"
                        android:gravity="center"
                        android:text="@string/double_text"
                        android:textAllCaps="false"
                        android:textColor="@color/grey_text_font_3.1"
                        android:textSize="16sp" />
                </com.dmss.burbankapp.utility.SquareView>

                <com.dmss.burbankapp.utility.SquareView
                    android:id="@+id/ll_notsure"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangel_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:id="@+id/img_notsure"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/group_question"
                        android:textColor="@color/black"
                        app:tint="@color/grey_text_font_3.1" />


                    <TextView
                        android:id="@+id/tv_notsure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                         android:textAppearance="@style/FontMedium"
                        android:gravity="center"
                        android:text="@string/not_sure"
                        android:textAllCaps="false"
                        android:textColor="@color/grey_text_font_3.1"
                        android:textSize="16sp" />

                </com.dmss.burbankapp.utility.SquareView>


            </LinearLayout>

            <include
                android:id="@+id/bottom_view"
                layout="@layout/layout_bottom_next_previous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>